<resources>
    <string name="app_name">My Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_add_note">Add Note</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_tos">Dengan masuk atau daftar, kamu udah setuju sama Ketentuan Layanan dan Kebijakan Privasi.</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_content">Content</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Create account? Sign Up</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_reset">Reset</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="action_add_note">Add</string>

    <string name="welcome">Welcome !</string>

    <string name="success">Successfully !</string>
    <string name="error">Whoops, something went wrong !</string>

    <string name="check_email_verify">Check your email to verify your account !</string>
    <string name="check_email_reset">Successfully sent, check your email !</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>

    <string name="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquid amet dolorem doloribus, excepturi illum in, incidunt inventore maiores modi mollitia porro quidem quos reprehenderit sequi totam ut vel voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere id provident sit. Dignissimos esse expedita hic id iusto nemo non quae? Autem consectetur eaque eligendi, iure minus numquam quasi sunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam corporis culpa, cum debitis, dignissimos dolorum fuga in porro quidem veniam vitae voluptate. Fugit illo impedit in modi quas quo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae delectus dolor eos, id illo, inventore iste nemo nihil nobis officiis quae quam quod recusandae soluta ullam voluptas voluptatem voluptatibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos esse, exercitationem hic maxime numquam quae quas. Earum enim fugiat laboriosam magnam magni maxime, minus molestiae quis quisquam reprehenderit, sequi suscipit.</string>
</resources>